--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+cargo-features = ["edition2024"]
 [package]
 name = "offline_dx_bundler"
 version = "0.1.0"
@@ -20,6 +21,7 @@ serde_yaml = "0.9"
 gray_matter = "0.3"
 pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
 same-file = "1.0"
+clap = { version = "4.5", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.23"
